--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 
-  <head>Welcome</head>
+  <head>
+    <title>Welcome</title>
+  </head>
   <body>
     <h2>Hallo World, dio22r Github!</h2>
   </body>
