--- a/engagement/index.html
+++ b/engagement/index.html
@@ -30,7 +30,7 @@
         <link href="./css/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div id="slide">    
+        <div id="slide" class="close-invitation">    
             <div  class="carousel slide carousel-fade d-md-none" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -63,8 +63,13 @@
                 
                 <div class="bottom-content font-montserrat d-flex align-items-center justify-content-center text-center text-white">
                     <div>
-                        <h1 class="invitation-to">INVITATION TO</h1>
-                        <h1 id="invitation-name" class="invitation-name mx-3">. . . .</h1>
+                        <h1 class="invitation-to d-none">INVITATION TO</h1>
+                        <h1 id="invitation-name" class="invitation-name mx-3 d-none">. . . .</h1>
+                        <div id="open-invitation-wrapper" class="">
+                            <button id="open-invitation" class="btn btn-sm btn-secondary">
+                                Open Invitation
+                            </button>
+                        </div>
                     </div>
                 </div>
                 <div class="top-content">
@@ -282,9 +287,13 @@
                         </div>
                     </div>
                 </div>
+
+                <audio loop class="d-none">
+                    <source src="./assets/audio.mp3" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
             </div>
         </div>
-
 
         <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
