fix: open invitation

--- a/engagement/index.html
+++ b/engagement/index.html
@@ -83,7 +83,7 @@
             </div>
         </div>
 
-        <div id="content" class="bg-color-1">    
+        <div id="content" class="bg-color-1 d-none">    
             <div id="content-verse" class="child d-flex justify-content-center align-items-center">
                 <div>
                     <img class="image-verse-1" src="./assets/section-verse-1.png" class="rounded" alt="...">
