--- a/engagement/index.html
+++ b/engagement/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
 
-        <meta property="og:title" content="The Engagment - Christie & Dio" />
+        <meta property="og:title" content="The Engagement - Christie & Dio" />
         <meta property="og:description" content="Monday - Dec 18, 2023" />
         <meta property="og:url" content="https://ilovedstory.my.id/engagement" />
         <meta property="og:image" content="./assets/slide-mobile-1.png" />
@@ -311,7 +311,7 @@
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <h1 class="title-1 text-center">Wish & Pray</h1>
-                        
+
                         <div class="wish-wrapper-modal">
 
                         </div>
