--- a/wedding/index.html
+++ b/wedding/index.html
@@ -230,7 +230,7 @@
                         <div class="col-12 text-center mb-3">
                             <span class="free-text">Turut Mengundang</span>
                         </div>
-                        <div class="col-12 col-md-6 text-sm-end text-center">
+                        <div class="col-12 col-md-6 text-sm-end text-center mb-4 mb-md-0">
                             <div class="mb-2 free-text"><strong>Mempelai Pria:</strong></div>
                             <div class="free-text">
                                 Kel. Besar Wagey-Ratar<br />
@@ -298,8 +298,8 @@
                     </div>
                 </div>
 
-                <audio loop class="d-none">
-                    <source src="./assets/audio.mp3" type="audio/mpeg">
+                <audio id="myAudio" loop class="d-none">
+                    <source src="./assets/audio-wedding.mp3" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
             </div>
