fix: wedding gift

--- a/wedding/index.html
+++ b/wedding/index.html
@@ -107,7 +107,7 @@
                     <div class="col-12 col-md-3 order-0 order-md-1">
                         <img src="assets/christie.png" class="closeup-personal w-100 shadow-lg"/>
                     </div>
-                    <div class="col-12 col-md-6  pt-5 pt-md-0 ps-0 pe-md-5 d-flex flex-column justify-content-center  text-center text-md-start order-1 order-md-0 text-end">
+                    <div class="col-12 col-md-6  pt-5 pt-md-0 ps-0 pe-md-5 d-flex flex-column justify-content-center  text-center text-md-end order-1 order-md-0 text-end">
                         <div class="title-2-sm mb-3">
                             Christie Mamentu
                         </div>
@@ -297,7 +297,16 @@
                         </div>
                     </div>
                 </div>
+            </div>
 
+            <div id="wedding-gift" class="child text-white py-2 text-center">
+                <div class="d-flex justify-content-center align-items-center">
+                    <div>Wedding Gift: </div>
+                    <button class="btn btn-sm" data-bs-toggle="modal" data-bs-target="#weddingGift">
+                        <img src="assets/ovo.png" />
+                        <img src="assets/bca.png" />
+                    </button>
+                </div>
             </div>
 
             <audio id="myAudio" loop class="d-none">
@@ -318,6 +327,25 @@
 
                         <div class="wish-wrapper-modal">
 
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="modal fade" id="weddingGift" tabindex="-1" aria-labelledby="weddingGiftLabel" aria-hidden="true">
+            <div class="modal-dialog  modal-dialog-centered modal-dialog-scrollable">
+                <div class="modal-content">
+                    <div class="modal-body">
+                        <div class="text-end">
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <h1 class="title-1 text-center mb-3">Wedding Gift:</h1>
+                        <div class="d-flex align-items-center justify-content-center mb-2">
+                            <img src="assets/ovo.png" /> <span class="ms-3">0812 4139 6440 (Christie),</span> 
+                        </div>
+                        <div class="d-flex align-items-center justify-content-center mb-4">
+                            <img src="assets/bca.png" /> <span class="ms-3">0190294005 (Dio),</span> 
                         </div>
                     </div>
                 </div>
