--- a/wedding/index.html
+++ b/wedding/index.html
@@ -6,10 +6,10 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
 
-        <meta property="og:title" content="The Wedding - Christie & Dio" />
+        <meta property="og:title" content="The Wedding - Dio & Christie" />
         <meta property="og:description" content="Friday - Dec 20, 2024" />
         <meta property="og:url" content="https://ilovedstory.my.id/wedding" />
-        <meta property="og:image" content="./assets/galery-4.png" />
+        <meta property="og:image" content="assets/galery-4.png" />
         
 
         <title>The Wedding - Christie & Dio</title>
